--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,17 +1,29 @@
-.header nav{
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   padding: 0 20px;
-   height: 60px;
-   background: #fff;
-   box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
+.header nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+  height: 60px;
+  background: #fff;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
-.header nav a{
-   font-size: 18px;
-   text-decoration: none;
-   color: #000;
+.header nav a {
+  font-size: 18px;
+  text-decoration: none;
+  color: #000;
+  font-weight: bold;
+  box-shadow: inset 0 0 0 0 #6dd0f4;
+  margin: 0 -0.25rem;
+  padding: 0.25rem;
+  padding-right: 100px;
+  transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
-.header nav a:hover{
-   color: #00a2d4;
+.header nav a:hover {
+  color: #111213;
+  box-shadow: inset 100px 0 0 0 #cbcbcc;
+}
+.header nav img {
+  width: 200px;
+  height: 50px;
+  border-radius: 50%;
 }
