--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -3,3 +3,11 @@
   color: rgb(206, 32, 32);
   margin: 20px 20px;
 }
+.form-login {
+  margin: 50px auto;
+  width: 400px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+}
